# ophiuchi-desktop

./: .git-blame-ignore-revs  .gitignore  .prettierrc  README.md  components.json  next.config.js  package-lock.json  package.json  tailwind.config.ts
.github/ISSUE_TEMPLATE/: feature_request.md
src-tauri/: .env  .env.example  Cargo.toml  tauri.conf.json
src-tauri/bundle/templates/: server.conf.template
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: hosts.rs
src-tauri/src/keychainmgr/: keychain_passwords.rs  mod.rs
src-tauri/src/mac/: mac_main.rs  mac_passwords.rs  mod.rs
src/app/: global-error.tsx  globals.css  layout.tsx  page.tsx
src/app/endpoint-list/: page.tsx
src/app/settings/: page.tsx
src/app/status/: page.tsx
src/app/test-page/: page.tsx
src/components/: app-sidebar.tsx
src/components/page-components/: theme-toggle.tsx
src/components/page-components/add-proxy/: index.tsx
src/components/page-components/certificate-dialogs/: add-to-hosts.tsx  add-to-keychain.tsx  cert-buttons.tsx  generate.tsx  prepare-dialog.tsx
src/components/page-components/docker-control/: index.tsx
src/components/page-components/home/: index.tsx
src/components/page-components/proxy-list/: index.tsx
src/components/page-components/proxy-list/add-new/: group.tsx  index.tsx  proxy-to-group.tsx
src/components/page-components/proxy-list/delete/: delete-proxy-dialog.tsx
src/components/page-components/proxy-list/docker-log/: index.tsx
src/components/page-components/proxy-list/edit/: group.tsx
src/components/page-components/proxy-list/group-select/: index.tsx
src/components/page-components/proxy-list/prepare/: prepare-proxy-dialog.tsx
src/components/page-components/proxy-list/request-certificate-trust/: index.tsx
src/components/page-components/proxy-list/table/: index.tsx
src/components/page-components/setup/: index.tsx
src/components/page-components/setup-provider/: index.tsx
src/components/page-components/updater/: index.tsx
src/components/test-components/: password.tsx
src/components/tools/: ga.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  code.tsx  command.tsx  copy-command-button.tsx  dialog.tsx  dropdown-menu.tsx  form.tsx  input.tsx  multi-state-button.tsx  popover.tsx  sidebar.tsx  stepper.tsx  table.tsx  tabs.tsx
src/helpers/certificate-manager/: index.ts
src/helpers/file-manager/: index.ts
src/helpers/proxy-manager/: index.ts  interfaces.ts
src/helpers/proxy-manager/migration/: 001-create-group.ts
src/helpers/system/: index.ts
src/hooks/: use-docker.ts  use-docker.tsx  use-integer-height.ts
src/lib/: constants.ts
src/stores/: cert-keychain-store.ts  hosts-store.ts  proxy-list.ts  system-status.ts
