[package]
name = "app"
version = "0.6.1"
description = "Ophiuchi - Developers Toolkit"
authors = ["Jaeha Kim"]
license = "Private"
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "=2.5", features = [] }
tauri-plugin-sentry = "0.2"
tauri-plugin-fs = { version = "=2.2.0", features = ["watch"] }
tauri-plugin-dialog = "=2.2"
tauri-plugin-opener = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-shell = "=2.2"
tauri-plugin-process = "=2.2"
chrono = "0.4.38"
security-framework = "2.11.0"
syn = "=2.0.90" 
dotenv = "0.15.0"
time = "0.3.36"
# 0.5.11 and later require Rust 1.81. see https://github.com/delta-io/delta-rs/issues/3065
home = "=0.5.9"
regex = "1.10.3"


[dependencies.fix-path-env]
git = "https://github.com/tauri-apps/fix-path-env-rs"
#tag = "fix-path-env-v0.1.0"
#branch = "dev"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "=2.6"

