[package]
name = "app"
version = "0.6.1"
description = "Ophiuchi - Developers Toolkit"
authors = ["Jaeha Kim"]
license = "Private"
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "2.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "=2.5", features = [] }
tauri-plugin-sentry = "0.2"
tauri-plugin-fs = { version = "=2.2.0", features = ["watch"] }
tauri-plugin-dialog = "=2.2"
tauri-plugin-opener = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-shell = "=2.2"
tauri-plugin-process = "=2.2"
chrono = "0.4.38"
syn = "=2.0.90"
dotenv = "0.15.0"
time = "0.3.36"
home = "=0.5.9"
regex = "1.10.3"

[dependencies.fix-path-env]
git = "https://github.com/tauri-apps/fix-path-env-rs"

[features]
custom-protocol = ["tauri/custom-protocol"]

# Platform-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2.11.0"

[target.'cfg(target_os = "windows")'.dependencies]
# Add Windows-specific dependencies here if needed
# For example, if you need Windows credential storage:
# windows = { version = "0.52", features = ["Security_Credentials"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "=2.6"
